<resources>
    <string name="app_name">FarmApp</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="error_invalid_username">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="years">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>
    <string-array name="weedings">
        <item>Weeding One</item>
        <item>Weeding Two</item>
        <item>Weeding Three</item>
        <item>Weeding Four</item>
    </string-array>
    <string-array name="herb_applications">
        <item>Application One</item>
        <item>Application Two</item>
    </string-array>
    <string-array name="spinner_remarks">
        <item>Exellent</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
        <item>Very Poor</item>
    </string-array>
    <string name="label_size">25sp</string>
    <string name="title_activity_folia_feed_application_3">Foliar Feed Application 3</string>
    <string name="title_activity_gpstrackers">GPSTrackers</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_show_data">ShowDAta</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_activity_weeding_1">Manual Weeding one</string>
    <string name="title_activity_weeding_2">Manual Weeding two</string>
    <string name="title_activity_weeding_3">Manual Weeding three</string>
    <string name="title_activity_weeding_4">Manual Weeding four</string>
    <string name="title_good_rain">Good Rains</string>
    <string name="title_land_clearing">Land Clearing</string>
    <string name="title_ploughing">Ploughing</string>
    <string name="title_potholing">Potholing (basin) - manual</string>
    <string name="title_ridging">Ridging - manual</string>
    <string name="title_ripping">Ripping</string>
    <string name="title_broadcasting">Planting (broadcasting)</string>
    <string name="title_rows_lines">Planting (rows/lines)</string>
    <string name="herbicide_application_one">Herbicide Application One</string>
    <string name="herbicide_application_two">Herbicide Application Two</string>
    <string name="title_replanting">Re-Planting</string>
    <string name="title_gap_filling">Gap Filling</string>
    <string name="title_thinning">Thinning</string>
    <string name="title_mulching">Mulching</string>
    <string name="title_compost">Compost</string>
    <string name="title_manure">Manure</string>
    <string name="title_fert_basal">Fertilizer Application (Basal/D-compound)</string>
    <string name="title_fert_top_dressing">Fertilizer Application (Top dressing/Urea)</string>
    <string name="title_foliar_app_one">Foliar Feed (First)</string>
    <string name="title_foliar_app_two">Foliar Feed  (Second)</string>
    <string name="title_foliar_app_three">Foliar Feed (Third)</string>
    <string name="title_germination">Germination</string>
    <string name="title_finger_one">First Finger</string>
    <string name="title_finger_two">Second Finger</string>
    <string name="title_finger_thee">Third Finger</string>
    <string name="title_finger_four">Forth Finger</string>
    <string name="title_finger_five">Fifth Finger</string>
    <string name="sampling_station_one">Sample Station One</string>
    <string name="sampling_station_two">Sample Station Two</string>
    <string name="sampling_station_three">Sample Station Three</string>
    <string name="sampling_station_four">Sample Station Four</string>
    <string name="sampling_station_five">Sample Station Five</string>
    <string name="title_grading_one">Grading One</string>
    <string name="title_grading_two">Grading Two</string>
    <string name="title_grading_three">Grading Three</string>
    <string name="title_grading_four">Grading Four</string>
    <string name="family_hours">Family Hours</string>
    <string name="hired_hours">Hired Hours</string>
    <string name="money_out">Money Out</string>
    <string name="remarks">Remarks</string>
    <string name="activity_date">Activity Date</string>
    <string name="tractor">Tractor</string>
    <string name="oxen">Oxen</string>
    <string name="herb_type">Herbicide Type</string>
    <string name="application_method">Method of Application</string>
    <string name="quantity">Quantity (ml)</string>
    <string name="knapsack">Knapsack</string>
    <string name="ulva">ULVA+</string>
    <string name="update_farm_area">Update Farm Area</string>
    <string name="search_farmer">Search For Farmer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="google_map_api_key">AIzaSyCex5IHSw8MYuxZ-p7mPuzcPvdy_9QJIcM</string>
    <string name="btnUploadToServer">Save Farmer Details</string>
    <string name="female">F</string>
    <string name="male">M</string>
    <string name="open_serial_fail">Open the serial port fails!</string>
    <string name="connect_success">connect success</string>
    <string name="connect_fail">connect fail</string>
    <string name="connect_lost">connect lost</string>
    <string name="enable_bluetooth">Bluetooth-enabled</string>
    <string name="disable_bluetooth">Bluetooth has been disabled</string>
    <string name="no_bluetooth">Device does not support Bluetooth</string>
    <string name="connecting_bluetooth">connecting,please wait...</string>
    <string name="connect_bluetooth">connect bluetooth</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_bluetooth_device">select a device to connect</string>
    <string name="button_scan">Scan for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="baudrate">Baudrate:</string>
    <string name="version">Version</string>
    <string name="stop_connect">Disconnect</string>
    <string name="pin">ID</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="loop_read">Loop Read</string>
    <string name="barcode">Bar Code</string>
    <string name="rfid">RFID</string>
    <string name="exit_toast">Press again to exit the program</string>
    <string name="read_sfz">Reader</string>
    <string name="sequential_sfz">Continuous reader</string>
    <string name="stop">Stop</string>
    <string name="clear_sfz">Clear</string>
    <string name="read_card_fail">Did not find a card</string>
    <string name="read_card_success">Successful reader</string>
    <string name="place_finger">Please place finger</string>
    <string name="print_finger_again">Place finger again!</string>
    <string name="processing">Processing ...</string>
    <string name="generate_char_fail">Generate the feature value failed!</string>
    <string name="reg_model_success">Template synthesis success!</string>
    <string name="reg_model_fail">Synthetic template failed!</string>
    <string name="register_success">Registered successfully!</string>
    <string name="register_fail">Registration failed!</string>
    <string name="verifying_wait">Validating, please wait ...</string>
    <string name="down_char_fail">Download a template fails</string>
    <string name="verifying_through">Verified through</string>
    <string name="verifying_fail">Authentication failed</string>
    <string name="up_image_success">up image success</string>
    <string name="up_image_fail">up image fail</string>
    <string name="clear_model">Clear Model</string>
    <string name="id_model">ID:</string>
    <string name="clear_model_success">clear model success</string>
    <string name="clear_model_fail">clear model fail</string>
    <string name="enter_id">please enter ID</string>
    <string name="register3">register</string>
    <string name="down_store">down and store</string>
    <string name="validate3">verification</string>
    <string name="down_store_success">down and store success</string>
    <string name="down_store_fail">down and store fail</string>
    <string name="search_success">search success</string>
    <string name="search_fail">search fail</string>
    <string name="down_store_null">model can not be null</string>
    <string-array name="fingerprint_size">
        <item>small fingerprint</item>
        <item>big fingerprint</item>
    </string-array>
    <string name="card_number">Card</string>
    <string name="read_card">Reader</string>
    <string name="write_card">Write cards</string>
    <string name="write_password">Password:</string>
    <string name="update_password">Change Password</string>
    <string name="write_block_num">Write block number:</string>
    <string name="write_data">Write Data:</string>
    <string name="read_block_num">Read block number:</string>
    <string name="read_data">Read data:</string>
    <string name="writing_wait">Writing cards, please wait ...</string>
    <string name="reading_wait">Being reader, please wait ...</string>
    <string name="writing_success">Successful write cards</string>
    <string name="writing_fail">Failed to write cards</string>
    <string name="reading_success">Successful reader</string>
    <string name="reading_fail">Reader fails</string>
    <string name="card_to_area">Keep the card into a reader</string>
    <string name="first_card">Please reader, and then verify the fingerprint!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="register_fingerprint">Registering fingerprints</string>
    <string name="validate_fingerprint">Fingerprint verification</string>
    <string name="calibration">calibration</string>
    <string name="first_register">Please register fingerprints!</string>
    <string name="trap_two">Trap Two</string>
    <string name="trap_one">Trap One</string>
    <string name="action_taken">Action Taken</string>
    <string name="sprayed">Sprayed</string>
    <string name="no_action_taken">No Action</string>
    <string name="clear_flash">Clear Flash</string>
    <string name="title_settings">Settings</string>
    <string name="choose_left_or_right_thumb">Choose Left or Right Thumb</string>
    <string name="left">Left Thumb</string>
    <string name="right">Right Thumb</string>
    <string name="upload_data">Upload Data</string>
    <string name="download_data">Download data</string>
    <string name="unsynced_data">Unsynced Data</string>
    <string name="remember_me">Remember Me</string>
    <string name="select_date">Select Date</string>
    <string name="price">Price:</string>
    <string name="weight">Weight:</string>
    <string name="receipt_number">Receipt No:</string>
    <string name="deductions">Deductions: </string>
    <string name="total">Total:</string>
    <string name="after_deductions">After Deductions:</string>
</resources>