<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CameraActivity"
   >
    <item
        android:id="@+id/menu_upload_data"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload_data"
         />
    <item
        android:id="@+id/menu_download_data"
        android:icon="@drawable/ic_download"
        android:title="@string/download_data" />
      <item
        android:id="@+id/menu_check_status"
        android:icon="@drawable/ic_action_download_data"
        android:title="Check Status" />
      <item
        android:id="@+id/menu_check_sync"
        android:icon="@drawable/ic_action_download_data"
        android:title="@string/unsynced_data" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_download_data"
        android:title="@string/title_settings" />
</menu>

