<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/lv"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:1"

            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvThumbChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_left_or_right_thumb"

            android:visibility="invisible"/>

        <RadioGroup
            android:id="@+id/rgSelectThumb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rbLeftThumb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/left"/>

            <RadioButton
                android:id="@+id/rbRightThumb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/right"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_fingerprint"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate_fingerprint"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:N"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fingerprint"
            style="@style/Widget.AppCompat.Button.Colored"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/validate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate_fingerprint"
            style="@style/Widget.AppCompat.Button.Colored"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/clear_flash"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bManualCollection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="Manual Collection"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/calibration"

            android:textSize="20sp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/Widget.AppCompat.Button.Colored"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/upfail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/fingerprintImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>