<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton             style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fingerprint"

            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <androidx.appcompat.widget.AppCompatButton             style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate_fingerprint"

            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <androidx.appcompat.widget.AppCompatButton             style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/calibration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calibration"

            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <androidx.appcompat.widget.AppCompatButton             style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/backRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/fingerprintImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>