<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvActivityDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_date"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/tvActualDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bDatePicker"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/select_date"/>

            <TextView
                android:id="@+id/tvTrapOne"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trap_one"
                android:textColor="#000000"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/etTrapOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/tvTrapTwo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trap_two"
                android:textColor="#000000"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/etTrapTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:inputType="numberDecimal"
                />

            <LinearLayout
                android:id="@+id/layout_application_mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvActionTaken"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_taken"
                    android:textColor="#000000"
                    android:textSize="25sp"/>

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSprayed"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/sprayed"
                        android:textSize="20sp"/>

                    <RadioButton
                        android:id="@+id/rbNoAction"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/no_action_taken"
                        android:textSize="20sp"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bBack"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bNext"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>